# proteus

./: .clang-tidy  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  CMakeLists.txt  CONTRIBUTING.md  COPYRIGHT  DESIGN.md  README.md  REFACTOR_SUMMARY.md  codecov.yml  jit.cpp  mkdocs.yml  pyproject.toml  setup.py  tioga22-dStorageCache.h-473452.core  versions.json
benchmarks/hip/rsbench/: CMakeLists.txt  Makefile  experiments.json  simulation.cpp
bindings/python/: CMakeLists.txt  CppBindings.cpp  LLVMIRBindings.cpp  MLIRBindings.cpp  PythonBindings.cpp  PythonBindings.h
bindings/python/tests/: CMakeLists.txt  gpu_runtime.py  test_backend_loader.py  test_backend_loader_zero_backends.py  test_backend_selection.py  test_gpu_cpp_launch_validation.py  test_gpu_cpp_pointer_validation.py  test_gpu_cpp_smoke.py  test_gpu_mlir_fatal_paths.py  test_gpu_mlir_smoke.py  test_gpu_mlir_validation.py  test_host_cpp_smoke.py  test_host_cpp_validation.py  test_host_llvmir_smoke.py  test_host_llvmir_validation.py  test_invalid_clang_override.py  test_proteus_init_exports.py  test_support.py  test_wheel_layout.py  test_wildcard_import.py
packaging/python/backend-cu12/: README.md  pyproject.toml
packaging/python/backend-cuda/: README.md  pyproject.toml
pass/: CMakeLists.txt  GenRuntimeConstantTy.hpp  JitPass.cpp  ProteusJitPass.cpp  ProteusPass.cpp
src/lib/: CMakeLists.txt  CompiledLibrary.cpp  CompilerInterfaceDevice.cpp  CompilerInterfaceDeviceHIP.cpp  CompilerInterfaceHost.cpp  CompilerInterfaceRuntimeConstantInfo.cpp  Config.cpp  Engine.cpp  Error.cpp  JitEngine.cpp  JitEngineDeviceCUDA.cpp  JitEngineDeviceHIP.cpp  JitEngineHost.cpp  JitInterface.cpp  TimeTracing.cpp
src/lib/Caching/: MPISharedStorageCache.cpp  ObjectCacheChain.cpp  ObjectCacheRegistry.cpp  StorageCache.cpp
src/lib/Frontend/: Array.cpp  BuiltinsCUDA.cpp  BuiltinsHIP.cpp  CppJitModule.cpp  Dispatcher.cpp  Func.cpp  JitFrontend.cpp  LoopNest.cpp  LoopUnroller.cpp  TargetModel.cpp  TypeMap.cpp  Var.cpp  VarStorage.cpp
src/pass/: AnnotationHandler.cpp  AnnotationHandler.h  AutoReadOnlyCapturesAnalysis.cpp  AutoReadOnlyCapturesAnalysis.h  CMakeLists.txt  DetectScops.cpp  GenRuntimeConstantTy.hpp  Helpers.h  IRLinker.cpp  KernelArgPtrUseVisitor.h  KernelArgVisitor.h  LambdaAnalysis.cpp  LambdaAnalysis.h  NonAffineSCEVs.cpp  ProteusPass.cpp  Types.h
src/runtime/: CMakeLists.txt  CUDADriverAPI.cpp  CompiledLibrary.cpp  CompilerInterfaceDevice.cpp  CompilerInterfaceHost.cpp  CompilerInterfaceRuntimeConstantInfo.cpp  Error.cpp  HIPRuntimeAPI.cpp  Init.cpp  JITPassPluginRegistry.cpp  JitEngine.cpp  JitEngineDeviceCUDA.cpp  JitEngineDeviceHIP.cpp  JitEngineHost.cpp  JitInterface.cpp  KernelMetadata.cpp  ProteusCUDARuntimeBuiltins.cpp  TimeTracing.cpp  exports.map
src/runtime/Caching/: MPICentralizedStorageCache.cpp  MPIHelpers.cpp  MPILocalLookupCache.cpp  MPIRemoteLookupCache.cpp  MPISharedStorageCache.cpp  MPIStorageCache.cpp  ObjectCacheChain.cpp  ObjectCacheRegistry.cpp  StorageCache.cpp
src/runtime/Frontend/: Builtins.cpp  BuiltinsCUDA.cpp  BuiltinsHIP.cpp  CUDAToolchain.cpp  CppJitCompiler.cpp  CppJitCompilerClang.cpp  CppJitCompilerNvcc.cpp  CppJitFuncAttribute.cpp  CppJitModule.cpp  Dispatcher.cpp  Func.cpp  HIPToolchain.cpp  JitFrontend.cpp  JitFuncAttribute.cpp  LLVMCodeBuilder.cpp  LLVMIRJitModule.cpp  LLVMTypeMap.cpp  MLIRCodeBuilder.cpp  MLIRJitModule.cpp  MLIRLower.cpp  TypeMap.cpp  VarStorage.cpp
tests/: CMakeLists.txt  JITTestPass.cpp  JITTestPass.exports.map  instrumentation-test.cpp
tests/cpu/: CMakeLists.txt  custom_pipeline.cpp  daxpy.cpp  daxpy_annot_long.cpp  daxpy_annot_mix.cpp  daxpy_api.cpp  dynamic_jit_array.cpp  frontend.cpp  jit_eh.cpp  jit_pass_plugin.cpp  jit_pass_plugin_cmake.cpp  jit_struct.cpp  lambda.cpp  lambda_auto_readonly.cpp  lambda_def.cpp  lambda_def_register_once.cpp  lambda_factory.cpp  lambda_field_pointer_escape.cpp  lambda_mixed_captures.cpp  lambda_multiple.cpp  lambda_multiple_api.cpp  lambda_nested_captures.cpp  lambda_pointer_captures.cpp  lambda_ptrtoint_capture.cpp  lambda_signature.cpp  lambda_spec_test.cpp  lambda_written_captures.cpp  modify_gvar.cpp  mpi.cpp  test_engine.cpp  types.cpp  types_api.cpp  types_jit_array.cpp
tests/frontend/: CMakeLists.txt  assignments.cpp  conditionals.cpp  loops.cpp
tests/frontend/cpu/: CMakeLists.txt  add_vectors.cpp  add_vectors_runconst.cpp  array.cpp  assign.cpp  cast.cpp  condition.cpp  convert.cpp  cpp_instantiate.cpp  cpp_instantiate_extraargs.cpp  cpp_same_symbol.cpp  cpp_source.cpp  cpp_store_handle.cpp  external_call.cpp  for.cpp  for_early_ret.cpp  for_lambda.cpp  for_unroll.cpp  functional_blocks.cpp  get_address.cpp  if.cpp  if_early_ret.cpp  if_else.cpp  internal_call.cpp  intrinsics.cpp  loop.cpp  loopnest_1d.cpp  loopnest_3d.cpp  loopnest_3d_uniformtile.cpp  min.cpp  multi_module.cpp  operators.cpp  tiled_matmul.cpp  tiled_transpose.cpp  vars.cpp  while.cpp
tests/frontend/cuda/: CMakeLists.txt  assign.cpp
tests/frontend/gpu/: CMakeLists.txt  adam.cpp  adam_runconst.cpp  add_vectors.cpp  add_vectors_runconst.cpp  atomics.cpp  cast.cpp  convert.cpp  cpp_adam.cpp  cpp_device_nvcc.cpp  for.cpp  (+26 more)
tests/gpu/: CMakeLists.txt  alias.cpp  alias_func.cpp  alias_gvar.cpp  block_grid_dim_1d.cpp  block_grid_dim_2d.cpp  block_grid_dim_3d.cpp  builtin_globals.cpp  cast_launcher.cpp  daxpy.cpp  daxpy_api.cpp  device_code.cpp  device_code2.cpp  device_func.cpp  dim_spec_cache_test.cpp  dominator-test.cpp  dynamic_jit_array.cpp  enable_disable.cpp  escape_global.cpp  file1_kernel.cpp  file1_kernel_launcher.cpp  file2_kernel.cpp  file2_kernel_launcher.cpp  force_annotations.cpp  global_var_register.cpp  gpu_common.h  gvar1.cpp  gvar2.cpp  gvar_driver.cpp  indirect_fallthrough.cpp  indirect_launcher.cpp  indirect_launcher_2.cpp  indirect_launcher_arg.cpp  indirect_launcher_arg_api.cpp  indirect_launcher_enum.cpp  indirect_launcher_multi.cpp  indirect_launcher_multi_arg.cpp  indirect_launcher_multi_arg_api.cpp  indirect_launcher_tpl_multi.cpp  indirect_launcher_tpl_multi_arg.cpp  (+82 more)
tests/hip/: CMakeLists.txt  daxpy_hip.cpp
(+4034 files in other folders)
